SQUASHME: fixup overriden color palette

--- a/src/pages/utils/globals.css
+++ b/src/pages/utils/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply text-sm text-gray800 md:text-sm bg-gray100;
+    /* @apply text-sm md:text-sm; */
   }
 
   .h1,
@@ -28,7 +28,7 @@
   }
 
   p {
-    @apply text-gray600 tracking-snug font-normal leading-snug md:leading-normal;
+    @apply text-gray-600 tracking-snug font-normal leading-snug md:leading-normal;
   }
 }
 
